--- a/profil.html
+++ b/profil.html
@@ -694,7 +694,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-1.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_bear"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Медведь</h3>
                                 </div>
@@ -708,7 +710,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-2.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_robot"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Робот</h3>
                                 </div>
@@ -722,7 +726,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-3.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_vampire"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Вампир</h3>
                                 </div>
@@ -736,7 +742,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-4.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_unicorn"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Единорог</h3>
                                 </div>
@@ -750,7 +758,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-5.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_lion"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Лев</h3>
                                 </div>
@@ -764,7 +774,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-6.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_gnome"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Гном</h3>
                                 </div>
@@ -778,7 +790,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-4.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_unicorn"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Единорог</h3>
                                 </div>
@@ -791,7 +805,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-5.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_lion"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Лев</h3>
                                 </div>
@@ -805,7 +821,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-6.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_gnome"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Гном</h3>
                                 </div>
@@ -819,7 +837,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-4.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_unicorn"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Единорог</h3>
                                 </div>
@@ -833,7 +853,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-5.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_lion"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Лев</h3>
                                 </div>
@@ -847,7 +869,9 @@
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
-                                    <img src="img/gallery/profile-6.png" alt="">
+                                    <svg>
+                                      <use xlink:href="img/icons/sprite.svg#smile_gnome"></use>
+                                    </svg>
                                   </div>
                                   <h3 class="profil__item-title">Смайлы Гном</h3>
                                 </div>
