--- a/faq.html
+++ b/faq.html
@@ -83,7 +83,9 @@
                 <div class="header__profile-row">
                   <div class="header__profile-sum">
                     <div class="header__profile-sum-img">
-                      <img src="img/gallery/baks.png" alt="">
+                      <svg>
+                        <use xlink:href="img/icons/sprite.svg#dollar"></use>
+                      </svg>
                     </div>
 
                     <span>1.32m</span>
