sound button fix

--- a/roulette.html
+++ b/roulette.html
@@ -715,12 +715,6 @@
                   </div>
 
                   <div class="roulette__rull-line"></div>
-
-                  <a href="##" class="roulette__rull-sound sound" data-value="soundOn">
-                    <svg>
-                      <use xlink:href="img/icons/sprite.svg#sound_off"></use>
-                    </svg>
-                  </a>
                 </div>
 
                 <div class="roulette__previous-wrapper">
@@ -774,6 +768,11 @@
                         </svg>
                       </div>
                     </div>
+                    <a href="##" class="roulette__previous-sound sound" data-value="soundOn">
+                      <svg>
+                        <use xlink:href="img/icons/sprite.svg#sound_off"></use>
+                      </svg>
+                    </a>
                   </div>
                 </div>
 
