no inventory update

--- a/profil.html
+++ b/profil.html
@@ -737,6 +737,12 @@
                         <div class="profil__block">
                           <div class="profil__block-row">
                             <div class="profil__items">
+
+                              <!-- If there is no items -->
+                              <div class="profil__warning" style="display: none;">
+                                Предметы можно получить из кейсов (даются за новый уровень)..
+                              </div>
+
                               <div class="profil__item">
                                 <div class="profil__item-wrapper">
                                   <div class="profil__item-img">
@@ -927,6 +933,8 @@
                                   <a href="##" class="profil__item-tag">Продать за 30K</a>
                                 </div>
                               </div>
+
+
                             </div>
 
                             <div class="profil__slider-block-wrapper">
