--- a/roulette.html
+++ b/roulette.html
@@ -678,82 +678,82 @@
                   <div class="roulette__rull-wrapper scrollbar-overflow roulette__rull-wrapper_blur">
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#spades"></use>
+                        <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#spades"></use>
+                        <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#spades"></use>
+                        <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#coin"></use>
+                        <use xlink:href="img/icons/sprite.svg#coin_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#spades"></use>
+                        <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#spades"></use>
+                        <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#coin"></use>
+                        <use xlink:href="img/icons/sprite.svg#coin_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#spades"></use>
+                        <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                       </svg>
                     </div>
                     <div class="roulette__rull-img">
                       <svg>
-                        <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                        <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                       </svg>
                     </div>
 
@@ -769,48 +769,49 @@
                     <div class="roulette__previous-items">
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#spades"></use>
+                          <use xlink:href="img/icons/sprite.svg#spades_stroke_grey"></use>
                         </svg>
                       </div>
 
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                          <use xlink:href="img/icons/sprite.svg#hearts_stroke_grey"></use>
                         </svg>
                       </div>
 
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#spades"></use>
+                          <use xlink:href="img/icons/sprite.svg#spades_stroke_grey"></use>
                         </svg>
                       </div>
 
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#coin"></use>
+                          <use xlink:href="img/icons/sprite.svg#coin_stroke_grey"></use>
                         </svg>
                       </div>
 
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#spades"></use>
+                          <use xlink:href="img/icons/sprite.svg#spades_stroke_grey"></use>
                         </svg>
                       </div>
 
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                          <use xlink:href="img/icons/sprite.svg#hearts_stroke_grey"></use>
                         </svg>
                       </div>
 
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#spades"></use>
+                          <use xlink:href="img/icons/sprite.svg#spades_stroke_grey"></use>
                         </svg>
                       </div>
+
                       <div class="roulette__previous-item">
                         <svg>
-                          <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                          <use xlink:href="img/icons/sprite.svg#hearts_stroke_grey"></use>
                         </svg>
                       </div>
                     </div>
@@ -859,7 +860,7 @@
                       <div class="roulette__item-name">
                         <div class="roulette__item-img">
                           <svg>
-                            <use xlink:href="img/icons/sprite.svg#hearts"></use>
+                            <use xlink:href="img/icons/sprite.svg#hearts_stroke_white"></use>
                           </svg>
                         </div>
                         <h3 class="roulette__item-title">Черви</h3>
@@ -875,7 +876,7 @@
                       <div class="roulette__item-name">
                         <div class="roulette__item-img">
                           <svg>
-                            <use xlink:href="img/icons/sprite.svg#coin"></use>
+                            <use xlink:href="img/icons/sprite.svg#coin_stroke_white"></use>
                           </svg>
                         </div>
                         <h3 class="roulette__item-title">Монета</h3>
@@ -891,7 +892,7 @@
                       <div class="roulette__item-name">
                         <div class="roulette__item-img">
                           <svg>
-                            <use xlink:href="img/icons/sprite.svg#spades"></use>
+                            <use xlink:href="img/icons/sprite.svg#spades_stroke_white"></use>
                           </svg>
                         </div>
                         <h3 class="roulette__item-title">Пики</h3>
